package itim.proto;
option java_package = "vn.itim.engine.eval.regional";

message Province {
	required string code = 1;
	required string fullName = 2;
	optional string postCode = 3;
	optional bool isCentrallyGoverned = 4;
	optional int32 phoneLength = 5;
}
